add digital clock

--- a/main.less
+++ b/main.less
@@ -42,3 +42,13 @@ h1{
   font-size: 3em;
   text-align: center;
 }
+
+.time, .date{
+  display: block;
+  height: 25%;
+  line-height: 25vh;
+}
+
+.time{
+  font-size: 4em;
+}
